# okx-quant-framework

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml  run_live.py  run_research.py
configs/: paper_trading.example.yaml  paper_trading.yaml  paper_trading_doge.yaml  research.example.yaml  research.yaml  research_adaptive_doge.yaml  research_doge.yaml  research_rsi.example.yaml  research_wld.yaml
examples/: quickstart.py
okx_quant/: __init__.py
okx_quant/backtest/: __init__.py  engine.py
okx_quant/config/: __init__.py  auth.py  settings.py
okx_quant/gateway/: __init__.py  rest_client.py  ws_client.py
okx_quant/live/: __init__.py  runner.py
okx_quant/models/: __init__.py  market.py
okx_quant/monitoring/: __init__.py  ledger.py  logger.py  metrics.py
okx_quant/oms/: __init__.py  order_manager.py
okx_quant/risk/: __init__.py  risk_manager.py
okx_quant/strategy/: __init__.py  base.py
scripts/: api_audit.py  diagnose_order.py  run_termux_bg.sh  setup_termux.sh  termux_boot.sh
strategies/: adaptive_ema.py  macro_ema.py  my_strategy.example.py  rsi_reversal.py
tests/: __init__.py  test_audit_edge_cases.py  test_config_auth.py  test_gateway.py  test_integration.py  test_ledger.py  test_live_integration.py  test_monitoring.py  test_oms.py  test_risk.py  test_strategy.py
